[package]
name = "wgpu-tilemap"
version = "0.1.0"
edition = "2021"
authors = ["Avi Weinstock <git@aweinstock.com>"]
license = "Apache-2.0"
categories = ["2d", "gamedev", "graphics", "rendering", "tile", "tiled", "wgpu"]
description = "wgpu middleware for GPU-accelerated tilemap rendering, primarily targeted at 2d games"
readme = "README.md"

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
vek = "0.15"
wgpu = { version = "0.17" }

csv = { version = "1.2", optional = true }
image = { version = "0.24", default-features = false, optional = true }
serde = { version = "1.0", optional = true }
wgpu-profiler = { version = "0.14", optional = true }

[features]
default = []
serde = ["dep:serde"]
wgpu-profiler = ["dep:wgpu-profiler"]
image = ["dep:image"]
csv = ["dep:csv"]
