[package]
name = "life"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
wgpu = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
wgpu-example = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
wgpu-tilemap = { path = "../../" }
vek = "0.15"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
